Update and rename retro games.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RETRO | PLAY RETRO FEEL ORIGINAL</title>
     <link rel="icon" href="logo_trial-removebg-preview (2).png" type="image/x-icon">
-    <link rel="stylesheet" href="./style/retro games.css">
+    <link rel="stylesheet" href="retro games.css">
 </head>
 <body>
     <nav>
