--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <span class="back" title="back to last page"><a href="retro games.html">◀</a></span></title>
-          <div class="im"><img src="./PICS/test.png" img height="80" img width="220">
+          <div class="im"><img src="test.png" img height="80" img width="220">
           </div>
           <input type="text" placeholder="Not available">
           <ul>
@@ -32,7 +32,7 @@
               <li>
                   </i><p class="lass">Profile</p></a>
               </li>
-              <img src="./PICS/me.jpg">
+              <img src="me.jpg">
               </div></a>
           </ul>
           
@@ -43,7 +43,7 @@
             <h1>Victor Ogwo</h1>
             <span class="dob"><p>Date of birth<input type="date" placeholder="01/28/2008"></p></span>
             <span class="em"><p>Email address</address><input type="email" placeholder="victorogwo14@gmail.com"></p></span>
-            <img src="./PICS/me.jpg">
+            <img src="me.jpg">
         </div>
         <div class="next">
             
