--- a/FREEFIRE.html
+++ b/FREEFIRE.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <span class="back" title="back to last page"><a href="retro games.html">◀</a></span>
-        <div class="im"><img src="./PICS/test.png" img height="80" img width="220">
+        <div class="im"><img src="test.png" img height="80" img width="220">
         </div>
         <input type="text" placeholder="Not available">
         <ul>
@@ -32,19 +32,19 @@
             <li>
                 </i><p class="lass">Profile</p></a>
             </li>
-            <img src="./PICS/me.jpg">
+            <img src="me.jpg">
             </div></a>
         </ul>
     </nav>
     <div class="flex">
         <div class="cover">
                  <div class="first">
-                     <img src="./PICS/ff.png" img width="230" img height="225" alt="FREEFIRE" loading="lazy">
+                     <img src="ff.png" img width="230" img height="225" alt="FREEFIRE" loading="lazy">
                      <div class="free">
                      <h1>Free Fire Winterlands Download for pc 🎮🎮🎮<br>1O minutes+ battle royale game.</h1>
                      <p>+1billion download(s) . ratings 5.0⭐⭐⭐⭐⭐<br><span>in-app purchases.</span> </p>
                      <br>
-                     <a href="./application/free-fire-gameloop-1-96-3.exe">
+                     <a href="free-fire-gameloop-1-96-3.exe">
                          <button>
                          DOWNLOAD
                              </button></a>
@@ -54,12 +54,12 @@
          <div class="screenshot">
              <h1>In-Game Screenshot <span>& Gameplay</h1></span>
              <div class="shot">
-                 <a href="./PICS/com.dts.freefireth-screenshots-1.jpg">
-             <img src="./PICS/com.dts.freefireth-screenshots-1.jpg" img width="290" img height="180"></a>
-             <a href="./PICS/screen 1.jpg">
-             <img src="./PICS/screen 1.jpg" img width="250" img height="180"></a>
-             <a href="./PICS/com.dts.freefireth-screenshots-1.jpg">
-             <img class="last" src="./PICS/com.dts.freefireth-screenshots-1.jpg" img height="180" img width="250">    </a>
+                 <a href="com.dts.freefireth-screenshots-1.jpg">
+             <img src="com.dts.freefireth-screenshots-1.jpg" img width="290" img height="180"></a>
+             <a href="screen 1.jpg">
+             <img src="screen 1.jpg" img width="250" img height="180"></a>
+             <a href="com.dts.freefireth-screenshots-1.jpg">
+             <img class="last" src="com.dts.freefireth-screenshots-1.jpg" img height="180" img width="250">    </a>
              </div>
              <video class="vid" src="One_Piece-E1107-720p.mp4"></video>
          </div>     
@@ -71,7 +71,7 @@
           <h1>Ratings and reviews<br>
          </h1>
           <div class="rate">
-             <img src="./PICS/Kakuzu5.png" alt="">
+             <img src="Kakuzu5.png" alt="">
              <h1>Kakuzu5..⭐⭐⭐⭐⭐. <br>
                  <span>This is the best battle royale i have played best gameplay 
                      <br> control system and graphics.
@@ -79,14 +79,14 @@
           </div><br>
 
           <div class="rate">
-             <img src="./PICS/Kisame4.png" alt="">
+             <img src="Kisame4.png" alt="">
              <h1>Tobirama senju..⭐⭐⭐⭐. <br>
                  <span>This is the best battle royale i have played best gameplay 
                      <br> control system and graphics.
                  </span></h1>
           </div>
           <div class="rate">
-             <img src="./PICS/Tendo4.png" alt="">
+             <img src="Tendo4.png" alt="">
              <h1>Uchiha Madara..⭐⭐⭐⭐⭐. <br>
                <span class="own"><input type="text" placeholder="Write your own review"></span>
         </div>
