--- a/FREEFIRE.html
+++ b/FREEFIRE.html
@@ -7,7 +7,7 @@
 </head>
 <title>Free fire | download page | by retro</title>
     <link rel="icon" href="PICS/ff.png" type="image/x-icon" style="border-radius: 20px;">
-<link rel="stylesheet" href="./STYLE/FREEFIRE.css">
+<link rel="stylesheet" href="FREEFIRE.css">
 <body>
     <nav>
         <span class="back" title="back to last page"><a href="retro games.html">◀</a></span>
