--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Your Profile</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./STYLE/profile.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='profile.css'>
     <script src='main.js'></script>
 </head>
 <body>
