--- a/form 5.html
+++ b/form 5.html
@@ -183,7 +183,7 @@
     <body>
       <div class="f">
       <div class="ne">
-        <img src="./PICS/test.png" img width="550" img height="200">
+        <img src="test.png" img width="550" img height="200">
         <br>
         <p>BEST GAMING WEBSITE WITH GAME THAT ARE THREAT FREE✔<BR>
           <span>
