--- a/MINI MILITIA.html
+++ b/MINI MILITIA.html
@@ -7,10 +7,10 @@
 </head>
 <title>Mini militia| download page | by retro</title>
     <link rel="icon" href="./PICS/mini militia.jfif" type="image/x-icon" style="border-radius: 20px;">
-<link rel="stylesheet" href="./STYLE/MINI MILITIA.css">
+<link rel="stylesheet" href="MINI MILITIA.css">
 <body>
     <nav>
-        <div class="im"><img src="./PICS/test.png" img height="80" img width="220">
+        <div class="im"><img src="test.png" img height="80" img width="220">
         </div>
         <input type="text" placeholder="Not available">
         <ul>
@@ -31,7 +31,7 @@
             <li>
                 </i><p class="lass">Profile</p></a>
             </li>
-            <img src="./PICS/me.jpg">
+            <img src="me.jpg">
             </div></a>
         </ul>
         
@@ -39,12 +39,12 @@
     <div class="flex">
         <div class="cover">
                  <div class="first">
-                     <img src="./PICS/mini militia.jfif" img width="230" img height="225">
+                     <img src="mini militia.jfif" img width="230" img height="225">
                      <div class="free">
                      <h1>Mini militia battle grounds <br>exciting multiplayer game.</h1>
                      <p>+1billion download(s) . ratings 5.0⭐⭐⭐⭐⭐<br><span>in-app purchases.</span> </p>
                      <br>
-                     <a href="./application/mini.exe">
+                     <a href="mini.exe">
                          <button>
                          DOWNLOAD
                              </button></a>
@@ -71,7 +71,7 @@
           <h1>Ratings and reviews<br>
          </h1>
           <div class="rate">
-             <img src="./PICS/popular-02.jpg" alt="">
+             <img src="popular-02.jpg" alt="">
              <h1>Clarence stone..⭐⭐⭐⭐⭐. <br>
                  <span>This is the best battle royale i have played best gameplay 
                      <br> control system and graphics.
@@ -79,14 +79,14 @@
           </div><br>
 
           <div class="rate">
-             <img src="./PICS/popular-04.jpg" alt="">
+             <img src="popular-04.jpg" alt="">
              <h1>John Doe..⭐⭐⭐⭐. <br>
                  <span>This is the best battle royale i have played best gameplay 
                      <br> control system and graphics.
                  </span></h1>
           </div>
           <div class="rate">
-             <img src="./PICS/popular-07.jpg" alt="">
+             <img src="popular-07.jpg" alt="">
              <h1>Victor Ogwo..⭐⭐⭐⭐⭐. <br>
                <span class="own"><input type="text" placeholder="Write your own review"></span>
         </div>
