--- a/GTA.html
+++ b/GTA.html
@@ -7,7 +7,7 @@
 </head>
 <title>GTA ⭐| download page | by retro</title>
     <link rel="icon" href="GTA.jpeg" type="image/x-icon" style="border-radius: 20px;">
-<link rel="stylesheet" href="./STYLE/GTA.css">
+<link rel="stylesheet" href="GTA.css">
 <body>
     <nav>
         <span class="back" title="back to last page"><a href="retro games.html">◀</a></span>
