--- a/PUBG.html
+++ b/PUBG.html
@@ -7,10 +7,10 @@
 </head>
 <title>pubg| download page | by retro</title>
     <link rel="icon" href="./PICS/pubg.jpg" type="image/x-icon" style="border-radius: 20px;">
-<link rel="stylesheet" href="./STYLE/PUBG.css">
+<link rel="stylesheet" href="PUBG.css">
 <body>
     <nav>
-        <div class="im"><img src="./PICS/test.png" img height="80" img width="220">
+        <div class="im"><img src="test.png" img height="80" img width="220">
         </div>
         <input type="text" placeholder="Not available">
         <ul>
@@ -31,7 +31,7 @@
             <li>
                 </i><p class="lass">Profile</p></a>
             </li>
-            <img src="./PICS/me.jpg">
+            <img src="me.jpg">
             </div></a>
         </ul>
         
@@ -39,12 +39,12 @@
     <div class="flex">
         <div class="cover">
                  <div class="first">
-                     <img src="./PICS/pubg.jpg" img width="230" img height="225">
+                     <img src="pubg.jpg" img width="230" img height="225">
                      <div class="free">
                      <h1>PUBG LITE (NEW SEASON UPDATE) Download for pc <br>1O minutes+ battle royale game.</h1>
                      <p>+1billion download(s) . ratings 5.0⭐⭐⭐⭐⭐<br><span>in-app purchases.</span> </p>
                      <br>
-                     <a href="./application/pubg-lite-1-0-1-0.exe">
+                     <a href="pubg-lite-1-0-1-0.exe">
                          <button>
                          DOWNLOAD
                              </button></a>
@@ -55,12 +55,12 @@
          <div class="screenshot">
              <h1>In-Game Screenshot <span>& Gameplay</h1></span>
              <div class="shot">
-                 <a href="./PICS/pubg screenshot (3).jfif">
-             <img src="./PICS/pubg screenshot (3).jfif" img width="280" img height="180"></a>
-             <a href="./PICS/pubg screenshot (2).jfif">
-             <img src="./PICS/pubg screenshot (2).jfif" img width="280" img height="180"></a>
-             <a href="./PICS/pubg screenshot.jfif">
-             <img class="last" src="./PICS/pubg screenshot.jfif" img height="180" img width="280">    </a>
+                 <a href="pubg screenshot (3).jfif">
+             <img src="pubg screenshot (3).jfif" img width="280" img height="180"></a>
+             <a href="pubg screenshot (2).jfif">
+             <img src="pubg screenshot (2).jfif" img width="280" img height="180"></a>
+             <a href="pubg screenshot.jfif">
+             <img class="last" src="pubg screenshot.jfif" img height="180" img width="280">    </a>
              </div>
              <video class="vid" src="One_Piece-E1107-720p.mp4"></video>
          </div>     
@@ -72,7 +72,7 @@
           <h1>Ratings and reviews<br>
          </h1>
           <div class="rate">
-             <img src="./PICS/popular-01.jpg" alt="">
+             <img src="popular-01.jpg" alt="">
              <h1>Clarence stone..⭐⭐⭐⭐⭐. <br>
                  <span>This is the best battle royale i have played best gameplay 
                      <br> control system and graphics.
@@ -80,14 +80,14 @@
           </div><br>
 
           <div class="rate">
-             <img src="./PICS/popular-02.jpg" alt="">
+             <img src="popular-02.jpg" alt="">
              <h1>John Doe..⭐⭐⭐⭐. <br>
                  <span>This is the best battle royale i have played best gameplay 
                      <br> control system and graphics.
                  </span></h1>
           </div>
           <div class="rate">
-             <img src="./PICS/popular-06.jpg" alt="">
+             <img src="popular-06.jpg" alt="">
              <h1>Victor Ogwo..⭐⭐⭐⭐⭐. <br>
                <span class="own"><input type="text" placeholder="Write your own review"></span>
         </div>
