--- a/GTA.html
+++ b/GTA.html
@@ -44,7 +44,7 @@
                      <h1>GTA Download for pc 🎮🎮🎮<br>ganster life simulation game.</h1>
                      <p>+100 Million download(s) . ratings 5.0⭐⭐⭐⭐⭐<br><span>in-app purchases.</span> </p>
                      <br>
-                     <a href="gta-5-real-life-mod-2.0-installer_DUf-ZI2.exe">
+                     <a href="GTA.exe">
                          <button>
                          DOWNLOAD
                              </button></a>
