--- a/MINI MILITIA.html
+++ b/MINI MILITIA.html
@@ -6,7 +6,7 @@
     <title>Mini militia| download page | by retro</title>
 </head>
 <title>Mini militia| download page | by retro</title>
-    <link rel="icon" href="./PICS/mini militia.jfif" type="image/x-icon" style="border-radius: 20px;">
+    <link rel="icon" href="mini militia.jfif" type="image/x-icon" style="border-radius: 20px;">
 <link rel="stylesheet" href="MINI MILITIA.css">
 <body>
     <nav>
@@ -54,12 +54,12 @@
          <div class="screenshot">
              <h1>In-Game Screenshot <span>& Gameplay</h1></span>
              <div class="shot">
-                 <a href="./PICS/militia screenshot.jfif">
-             <img src="./PICS/militia screenshot.jfif" img width="260" img height="180"></a>
-             <a href="./PICS/militia screenshot (2).jfif">
-             <img src="./PICS/militia screenshot (2).jfif" img width="260" img height="180"></a>
-             <a href="./PICS/militia screenshot.jfif">
-             <img class="last" src="./PICS/militia screenshot.jfif" img height="180" img width="260">    </a>
+                 <a href="militia screenshot.jfif">
+             <img src="militia screenshot.jfif" img width="260" img height="180"></a>
+             <a href="militia screenshot (2).jfif">
+             <img src="militia screenshot (2).jfif" img width="260" img height="180"></a>
+             <a href="militia screenshot.jfif">
+             <img class="last" src="militia screenshot.jfif" img height="180" img width="260">    </a>
              </div>
              <video class="vid" src="One_Piece-E1107-720p.mp4"></video>
          </div>     
