--- a/PUBG.html
+++ b/PUBG.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pubg| download page | by retro</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8244015063503947"
+     crossorigin="anonymous"></script>
 </head>
 <title>pubg| download page | by retro</title>
     <link rel="icon" href="./PICS/pubg.jpg" type="image/x-icon" style="border-radius: 20px;">
