--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>RETRO | PLAY RETRO FEEL ORIGINAL</title>
     <link rel="icon" href="logo_trial-removebg-preview (2).png" type="image/x-icon">
     <link rel="stylesheet" href="retro games.css">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8244015063503947"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
