--- a/CONTACT US.html
+++ b/CONTACT US.html
@@ -2,6 +2,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
 	<title>RETRO X SUPPORT </title>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8244015063503947"
+     crossorigin="anonymous"></script>
 </head>
 <body style="margin: 0;
 padding: 0;
