--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-8244015063503947">
     <title>RETRO | PLAY RETRO FEEL ORIGINAL</title>
     <link rel="icon" href="logo_trial-removebg-preview (2).png" type="image/x-icon">
     <link rel="stylesheet" href="retro games.css">
