--- a/FREEFIRE.html
+++ b/FREEFIRE.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-8244015063503947">
     <title>Free fire 🎮| download page | by retro</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8244015063503947"
      crossorigin="anonymous"></script>
