--- a/CONTACT US.html
+++ b/CONTACT US.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
+	<meta name="google-adsense-account" content="ca-pub-8244015063503947">
 	<title>RETRO X SUPPORT </title>
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8244015063503947"
      crossorigin="anonymous"></script>
