--- a/MINI MILITIA.html
+++ b/MINI MILITIA.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-8244015063503947">
     <title>Mini militia| download page | by retro</title>
 </head>
 <title>Mini militia| download page | by retro</title>
